--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,4 +1,24 @@
 {
+"description":
+"
+ *-------------------------------------------------------------------------
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ *
+ * Copyright (c) 2014-2015, wurenny@gmail.com, All rights reserved
+ *
+ * IDENTIFICATION
+ *     manifest.json
+ *
+ * This file is part of search2 project
+ * manifest is the global controllor which use json format, which content
+ * is ruled by chrome extension development requirements
+ *
+ *-------------------------------------------------------------------------
+",
+
 	"web_accessible_resources":["cts/contentScript.js","css/css.css","more/more.css","opt/options.html"],
 	"background":{
 		"persistent":false,
@@ -19,7 +39,6 @@
 	"name":"__MSG_app_title__",
 	"description":"__MSG_app_description__",
 	"options_page":"opt/options.html",
-	"permissions":["http://*/*","https://*/*","file:///*","storage","contextMenus"],
-	"update_url":"https:clients2.google.com/service/update2/crx",
-	"version":"1.1.0"
+	"permissions":["http://*/*","https://*/*","storage","contextMenus"],
+	"version":"1.1.1"
 }
