--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,47 +1,32 @@
 {
-"description":
- "-------------------------------------------------------------------------",
- "author":
- " This Source Code Form is subject to the terms of the Mozilla Public     ",
- "author":
- " License, v. 2.0. If a copy of the MPL was not distributed with this     ",
- "author":
- " file, You can obtain one at http://mozilla.org/MPL/2.0/.                ",
- "author":
- " Copyright (c) 2014-2015, wurenny@gmail.com, All rights reserved         ",
- "author":
- " IDENTIFICATION                                                          ",
- "author":
- "     manifest.json                                                       ",
- "author":
- " This file is part of search2 project                                    ",
- "author":
- " manifest is the global controllor which use json format, which content  ",
- "author":
- " is ruled by chrome extension development requirements                   ",
- "author":
- "-------------------------------------------------------------------------",
+	"description": "Create a good search habit by yourself !",
+	"author": "wurenny",
 
-	"web_accessible_resources":["cts/contentScript.js","css/css.css","css/pull.css","more/more.css","opt/options.html"],
-	"background":{
-		"persistent":false,
-		"page":"bg/evtpage.html"
+	"web_accessible_resources": ["cts/contentScript.js", "css/css.css", "css/pull.css", "more/more.css", "opt/options.html"],
+	"background": {
+		"persistent": false,
+		"page": "bg/evtpage.html"
 	},
-	"content_scripts":[{
-		"matches":["http://*/*","https://*/*","file:///*"],
-		"include_globs":["http:*","https:*"],
-		"js":["opt/option-data.js","inc/comm.js","cts/contentScript.js"],
-		"run_at":"document_start"
+	"content_scripts": [{
+		"matches": ["http://*/*", "https://*/*", "file:///*"],
+		"include_globs": ["http:*", "https:*"],
+		"js": ["opt/option-data.js", "inc/comm.js", "cts/contentScript.js"],
+		"run_at": "document_start"
 	}],
-	"content_security_policy":"script-src 'self' 'unsafe-eval'; object-src 'self'",
-	"default_locale":"zh_CN",
-	"icons":{"16":"img/logo16.png","32":"img/logo32.png","48":"img/logo48.png","96":"img/logo96.png","128":"img/logo128.png","256":"img/logo256.png"},
-	"minimum_chrome_version":"20",
-	"manifest_version":2,
-	"name":"__MSG_app_title__",
-	"name":"__MSG_app_title__",
-	"description":"__MSG_app_description__",
-	"options_page":"opt/options.html",
-	"permissions":["http://*/*","https://*/*","storage","contextMenus"],
-	"version":"1.1.9"
+	"content_security_policy": "script-src 'self' 'unsafe-eval' blob: ; object-src 'self'",
+	"default_locale": "zh_CN",
+	"icons": {
+		"16": "img/logo16.png",
+		"32": "img/logo32.png",
+		"48": "img/logo48.png",
+		"96": "img/logo96.png",
+		"128": "img/logo128.png",
+		"256": "img/logo256.png"
+	},
+	"minimum_chrome_version": "20",
+	"manifest_version": 2,
+	"name": "__MSG_app_title__",
+	"options_page": "opt/options.html",
+	"permissions": ["http://*/*", "https://*/*", "storage", "contextMenus"],
+	"version": "1.1.10"
 }
