--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,21 @@
 {
-	"description": "Create a good search habit by yourself !",
+	"description": "Practical and extensible search assistant",
 	"author": "wurenny",
 
-	"web_accessible_resources": ["cts/contentScript.js", "css/css.css", "css/pull.css", "more/more.css", "opt/options.html"],
+	"version": "2.0.0",
+	"minimum_chrome_version": "20",
+	"manifest_version": 3,
+	"name": "__MSG_app_title__",
+	"options_page": "opt/options.html",
+
+	"web_accessible_resources": [
+		{
+			"resources": ["cts/contentScript.js", "css/css.css", "css/pull.css", "more/more.css", "opt/options.html"],
+			"matches": ["<all_urls>"]
+		}
+	],
 	"background": {
-		"persistent": false,
-		"page": "bg/evtpage.html"
+		"service-worker": "bg/bg.js"
 	},
 	"content_scripts": [{
 		"matches": ["http://*/*", "https://*/*", "file:///*"],
@@ -13,7 +23,9 @@
 		"js": ["opt/option-data.js", "inc/comm.js", "cts/contentScript.js"],
 		"run_at": "document_start"
 	}],
-	"content_security_policy": "script-src 'self' 'unsafe-eval' blob: ; object-src 'self'",
+	"content_security_policy": {
+		"extension_pages": "script-src 'self'; object-src 'self';"
+	},
 	"default_locale": "zh_CN",
 	"icons": {
 		"16": "img/logo16.png",
@@ -23,10 +35,6 @@
 		"128": "img/logo128.png",
 		"256": "img/logo256.png"
 	},
-	"minimum_chrome_version": "20",
-	"manifest_version": 2,
-	"name": "__MSG_app_title__",
-	"options_page": "opt/options.html",
-	"permissions": ["http://*/*", "https://*/*", "storage", "contextMenus"],
-	"version": "1.1.11"
+	"permissions": ["storage", "contextMenus"],
+	"host_permissions": ["<all_urls>"]
 }
